<resources>
    <string name="app_name">SimpleNotes</string>
    <string name="begin_button">Begin</string>
    <string name="login_button">Log In</string>
    <string name="new_user_text">Don\'t have an account yet?</string>
    <string name="existing_user_note">Already have an account?</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="new_user_button">Tap here</string>
    <string name="confirm_password_field_hint">Confirm Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="logout_button">Log Out</string>
    <string name="homework_view_button">New Homework</string>
    <string name="welcome_message">Welcome!</string>
    <string name="time_left_indicator">Time Left:</string>
    <string name="completed_button">Completed</string>
    <string name="homework_creation_button">Add Homework</string>
    <string name="cancel_button">Cancel</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="password_reset_button">Reset Password</string>
    <string name="password_reset_button_hint">Reset</string>
</resources>
